samples/_failures_safe/1761701146_2d4ba8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_900d7c58.c: In function ‘main’:
./samples/SAFE/__tmp_900d7c58.c:131:5: error: expected expression at end of input
  131 |     } else
      |     ^
./samples/SAFE/__tmp_900d7c58.c:131:5: error: expected declaration or statement at end of input
